fix: fixed issue with file size and p2p transfer
fixed issue of files not wanting to transfer with p2p when too big by applying a throttle on the amount of data sent each time

--- a/images/frontend/src/core/pages/WebRTCTransferPage/components/modal/TransferFileModal.module.css
+++ b/images/frontend/src/core/pages/WebRTCTransferPage/components/modal/TransferFileModal.module.css
@@ -2,8 +2,8 @@
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-color: #202124;
-    opacity: 0.8;
+    background-color: #202124bd;
+    opacity: 1;
     display: flex;
     justify-content: center;
     align-items: center;
